--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,3 @@
-.container {
-  max-width: 1290px; }
-
 @font-face {
   font-family: "Krinkes Decor PERSONAL USE";
   src: url("../../public/fonts/KrinkesDecorPERSONAL.eot?") format("eot"), url("../../public/fonts/KrinkesDecorPERSONAL.woff") format("woff"), url("../../public/fonts/KrinkesDecorPERSONAL.ttf") format("truetype"), url("../../public/fonts/KrinkesDecorPERSONAL.svg#KrinkesDecorPERSONALUSE") format("svg");
@@ -520,6 +517,9 @@
     .slider-second .slider-txt-holder .box-holder, .slider-third .slider-txt-holder .box-holder {
       height: 300px; }
 
+  .slider .slider-third, .slider .slider-second {
+    padding-top: 150px; }
+
   .slider-third .line::before {
     width: 50px !important;
     left: 18px !important; }
@@ -881,6 +881,15 @@
     left: 15%; }
   .title-caption h2 .square::after {
     right: 15%; } }
+@media only screen and (max-width: 460px) {
+  .gallery-summer .title-caption h2::after {
+    width: 2%; }
+  .gallery-summer .title-caption h2::before {
+    width: 2%; }
+  .gallery-summer .title-caption h2 .square::before {
+    left: 5%; }
+  .gallery-summer .title-caption h2 .square::after {
+    right: 5%; } }
 @media only screen and (max-width: 320px) {
   .gallery-summer .title-caption h2::after {
     width: 0; }
@@ -1194,9 +1203,10 @@ footer {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
-      flex-direction: column; }
+      flex-direction: column;
+      margin-bottom: 0; }
     footer .footer-title {
-      margin-bottom: 15px; }
+      margin-bottom: 40px; }
     footer .footer-nav {
       margin-bottom: 35px; } }
   @media only screen and (max-width: 430px) {
